some style amendments

--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 3 | Dashboard</title>
+    <title>e-learning | Dashboard</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
@@ -1369,10 +1369,10 @@
         </div>
         <!-- /.content-wrapper -->
         <footer class="main-footer">
-            <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong>
+            <strong>Copyright &copy; {% now "Y" %}, Gor Paramazyan</strong>
             All rights reserved.
             <div class="float-right d-none d-sm-inline-block">
-                <b>Version</b> 3.0.2
+                <a href="https://github.com/Magnus-test/coursework_sem5" class="disabled" target="_blank"><b>Version</b> 1.1</a>
             </div>
         </footer>
 
