--- a/main_app/templates/main_app/footer.html
+++ b/main_app/templates/main_app/footer.html
@@ -2,6 +2,6 @@
     <strong>Copyright &copy; {% now "Y" %}, Gor Paramazyan</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 1.1
+        <a href="https://github.com/Magnus-test/coursework_sem5" class="text-secondary" target="_blank"><b>Version</b> 1.1</a>
     </div>
 </footer>
