--- a/main_app/templates/main_app/sidebar_template.html
+++ b/main_app/templates/main_app/sidebar_template.html
@@ -16,7 +16,8 @@
                 <img src="{{ request.user.profile_pic}}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">{{user}}</a>
+<!--                <a href="#" class="d-block">{{user}}</a>-->
+                <a href="#" class="d-block">Admin</a>
             </div>
         </div>
 
